kube/base/feed-agg/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-agg
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - args:
            - -data=/data
          name: feed-agg
          image: docker.seankhliao.com/feed-agg:latest
          env: []
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /etc/feed-agg
              name: config
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: feed-agg
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: feed-agg
        - name: data
          emptyDir: {}
