kube/base/feed-agg/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-agg
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
